--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,15 @@
 	"version": "0.2.0",
 	"configurations": [
 		{
+			"type": "node",
+			"request": "launch",
+			"name": "Gulp ",
+			"program": "${workspaceFolder}/node_modules/gulp/bin/gulp.js",
+			"args": [
+				"default"
+			]
+		},
+		{
 			"name": "Extension",
 			"type": "extensionHost",
 			"request": "launch",
