--- a/syntaxes/clear-silver.yaml
+++ b/syntaxes/clear-silver.yaml
@@ -111,7 +111,7 @@ repository:
       '1': { name: keyword.control.if.end }
     patterns:
       - begin: (?<=if:)
-        end: (?=\s*\?>)
+        end: (?=\?>)
         patterns:
           - include: '#expression'
       - begin: (\?>)
@@ -131,12 +131,12 @@ repository:
               '3': { name: keyword.control.elif }
               '4': { name: punctuation.separator.key-value.csr }
               '5': { name: string.value }
-            end: (?:\s|^)(\?>)
+            end: (?:\s*|^)(\?>)
             endCaptures:
               '1': { name: punctuation.definition.tag.end.cs.elif }
             patterns:
               - begin: (?<=elif:)
-                end: (?=\s*\?>)
+                end: (?=\?>)
                 patterns:
                   - include: '#expression'
         # else
@@ -166,7 +166,7 @@ repository:
       '3': { name: keyword.control.alt.end }
     patterns:
       - begin: (?<=alt:)
-        end: (?=\s*\?>)
+        end: (?=\?>)
         patterns:
           - include: '#expression'
       - match: (\?>)
