--- a/package.json
+++ b/package.json
@@ -24,7 +24,18 @@
     "categories": [
         "Other"
 	],
+	"main": "./src/extension",
+	"activationEvents": [
+		"onLanguage:clear-silver",
+		"onCommand:extension.enable"
+	],
     "contributes": {
+		"commands": [
+            {
+                "command": "extension.enable",
+                "title": "Toggle ClearSilver"
+			}
+        ],
         "languages": [
             {
                 "id": "clear-silver",
@@ -43,7 +54,6 @@
                 "scopeName": "source.csr",
                 "path": "./syntaxes/clear-silver.tmLanguage.json",
                 "embeddedLanguages": {
-                    "csr.pug.csr-pug": "csr-pug",
                     "text.html.basic": "html",
                     "meta.embedded.block.javascript": "source.js"
                 }
@@ -54,7 +64,14 @@
                 "language": "clear-silver",
                 "path": "./snippets/clear-silver.json"
             }
-        ]
+        ],
+		"menus": {
+			"editor/context": [{
+				"when": "editorFocus",
+				"command": "extension.enable",
+				"group": "z_commands"
+			}]
+		}
     },
     "devDependencies": {
         "eslint": "^4.11.0",
