feat: snippet add else

--- a/snippets/clear-silver.yaml
+++ b/snippets/clear-silver.yaml
@@ -71,6 +71,14 @@ clearsilver elif:
     - "<?cs elif:$1 ?>"
     - "$0"
   description: 'clearsilver: if'
+clearsilver else:
+  prefix:
+    - else
+    - cs-else
+    - "<?cs-else"
+  body:
+    - "<?cs else ?>$1"
+  description: 'clearsilver: else'
 clearsilver if-else:
   prefix:
     - if-else
